--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             })
             .then(data => {
                 console.log(data);
-                window.location.href = "https://www.instagram.com/reel/C46fqO5ig-z/?utm_source=ig_web_copy_link";
+                window.location.href = "https://www.tiktok.com/@khadija29151/photo/7349133986926529797";
             })
             .catch(error => {
                 console.error('There has been a problem with your fetch operation:', error);
