--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             })
             .then(data => {
                 console.log(data);
-                window.location.href = "";
+                window.location.href = "https://www.instagram.com/reel/C6_3W79N3T4/?utm_source=ig_web_copy_link";
             })
             .catch(error => {
                 console.error('There has been a problem with your fetch operation:', error);
